--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Gimzu",
-  "name": "Gimzu - Autobiography Memory",
+  "short_name": "SupaLife",
+  "name": "SupaLife",
   "icons": [
     {
       "src": "favicon.ico",
