--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://asafdulman.github.io/supalife",
+  "homepage": "https://supalife.herokuapp.com/",
   "name": "supalife",
   "version": "0.1.0",
   "private": true,
